# soilpulse-et

./: .gitignore  Makefile  README.md  pyproject.toml
data/: README.md
docs/: ARCHITECTURE.md  CODE_WALKTHROUGH.md  EXECUTIVE_SUMMARY.md  MARKET_AND_IMPACT.md  MISSION_CONCEPT.md  NEAR_TERM_VALIDATION_AND_HARDENING.md  PAPER_FINAL_CANDIDATE.md  PAPER_TEMPLATE_SUBMISSION.typ  REPRODUCIBILITY.md  RESOURCE_BUDGET.md  SOURCES.md  VIDEO_SLIDE_DECK.typ
docs/diagrams/: packet_decision_flow.mmd  soilpulse_architecture.mmd  soilpulse_architecture_paper.mmd
notebooks/: README.md
scripts/: README.md  appeears_ecostress_sample.py  build_hls_vegetation_fixture.py  build_hybrid_demo_fixture.py  build_local_data_manifest.py  build_terrain_context_fixture.py  build_video_charts.py  run_appeears_event_campaign.py  run_onboard_triage_demo.py  score_event_hunt_candidates.py  smoke_import.py
src/nasa_space_to_soil_challenge/: __init__.py  appeears.py  data_manifest.py  hls_vegetation.py  onboard_triage.py  paths.py  profile.py  terrain_context.py
tests/: test_appeears.py  test_appeears_campaign.py  test_data_manifest.py  test_event_hunt.py  test_hls_vegetation.py  test_hybrid_fixture.py  test_onboard_triage.py  test_profile.py  test_terrain_context.py
tests/fixtures/: candidate_tiles.hybrid.csv  candidate_tiles.synthetic.csv  ecostress_derived_2022_07_2022_08.csv  ecostress_derived_2023_07_2023_08.csv  ecostress_derived_2024_05_2024_06.csv  ecostress_derived_2024_06_2024_07.csv  ecostress_derived_2024_08_2024_09.csv  ecostress_derived_sample.csv  hls_vegetation_sample.csv  (+1 more)
